--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,14 @@
-version: '3.7'
+version: '2.0'
 services:
-  sonarqube:
-    build:
-      context: sonarqube/
-    ports:
-      - 9000:9000
-      - 9092:9092
-    container_name: sonarqube
   jenkins:
     build:
       context: jenkins/
     privileged: true
     user: root
     ports:
-      - 8080:8080
+      - 8081:8080
       - 50000:50000
-    container_name: jenkins
+    container_name: myjenkins
     volumes:
       - /tmp/jenkins:/var/jenkins_home #Remember that, the tmp directory is designed to be wiped on system reboot.
       - /var/run/docker.sock:/var/run/docker.sock
-    depends_on:
-      - sonarqube
